--- a/docs/package.json
+++ b/docs/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.0.8",
     "@astrojs/svelte": "^7.0.4",
     "@flexiui/svelte-cssvars": "^0.0.18",
+    "@flexiui/svelte-dropdown": "^0.0.7",
     "@flexiui/svelte-quote": "^1.0.6",
     "@flexiui/svelte-tags-input": "^1.1.5",
     "astro": "^5.2.5",
