--- a/svelte/svelte-quote/package.json
+++ b/svelte/svelte-quote/package.json
@@ -1,40 +1,42 @@
 {
-	"name": "@flexiui/svelte-quote",
-	"version": "1.0.8",
-	"description": "A lightweight and flexible quote component for Svelte",
-	"keywords": [
-		"svelte",
-		"quote",
-		"component"
-	],
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "vite build && svelte-package",
-		"preview": "vite preview"
-	},
-	"files": [
-		"dist",
-		"!dist/**/*.test.*",
-		"!dist/**/*.spec.*"
-	  ],
-	  "sideEffects": [
-		"**/*.css"
-	],
-	"svelte": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"exports": {
-		".": {
-		"types": "./dist/index.d.ts",
-		"svelte": "./dist/index.js"
-		}
-	},
-	"devDependencies": {
-		"@sveltejs/package": "^2.3.10",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"svelte": "^5.19.9",
-		"vite": "^6.1.0"
-	},
-	"author": "alexgipi <alexgp895@gmail.com>",
-  	"license": "MIT"
+  "name": "@flexiui/svelte-quote",
+  "version": "1.0.9",
+  "description": "A lightweight and flexible quote component for Svelte",
+  "keywords": [
+    "svelte",
+    "quote",
+    "component"
+  ],
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build && svelte-package",
+    "preview": "vite preview"
+  },
+  "files": [
+    "dist",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
+  ],
+  "sideEffects": [
+    "**/*.css"
+  ],
+  "main": "./dist/index.js",
+  "svelte": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "svelte": "./dist/index.js",
+      "default": "./dist/index.js"
+    }
+  },
+  "devDependencies": {
+    "@sveltejs/package": "^2.3.10",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "svelte": "^5.19.9",
+    "vite": "^6.1.0"
+  },
+  "author": "alexgipi <alexgp895@gmail.com>",
+  "license": "MIT"
 }
