--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:docs": "npm run build --workspace=docs",
+    "start:docs": "npm run start --workspace=docs",
+    "dev:docs": "npm run dev --workspace=docs"
   },
   "keywords": [
     "FlexiUI",
