--- a/docs/package.json
+++ b/docs/package.json
@@ -2,6 +2,8 @@
   "name": "docs",
   "type": "module",
   "version": "0.0.1",
+  "description": "FlexiUI documentation site.",
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,13 +15,13 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.2.5",
     "@astrojs/svelte": "^7.0.11",
-    "@flexiui/svelte-cssvars": "^0.0.20",
+    "@flexiui/svelte-cssvars": "^0.0.21",
     "@flexiui/svelte-dropdown": "^0.0.12",
     "@flexiui/svelte-quote": "^1.0.9",
     "@flexiui/svelte-tags-input": "^1.1.5",
     "astro": "^5.7.5",
     "astro-expressive-code": "^0.40.1",
-    "svelte": "^5.19.9",
+    "latest-version": "^9.0.0",
     "typescript": "^5.6.3"
   }
 }
