--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "co": "sui-mono commit",
+    "check": "sui-mono check",
     "build:docs": "npm run build --workspace=docs",
     "dev:docs": "npm run dev --workspace=docs",
     "dev:svelte:tags-input": "npm run dev --workspace=svelte/tags-input",
