--- a/docs/package.json
+++ b/docs/package.json
@@ -15,8 +15,9 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.2.5",
     "@astrojs/svelte": "^7.0.11",
-    "@flexiui/svelte-cssvars": "^0.0.21",
-    "@flexiui/svelte-dropdown": "^0.0.12",
+    "@flexiui/svelte-cssvars": "^0.5.0",
+    "@flexiui/svelte-dropdown": "^0.4.0",
+    "@flexiui/svelte-prism-code-editor": "^0.0.14",
     "@flexiui/svelte-quote": "^1.0.9",
     "@flexiui/svelte-tags-input": "^1.1.5",
     "astro": "^5.7.5",
