--- a/svelte/svelte-rich-text/package.json
+++ b/svelte/svelte-rich-text/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@flexiui/svelte-rich-text",
-  "version": "0.0.1",
+  "version": "0.0.35",
   "description": "A lightweight and flexible rich text editor component for Svelte",
   "keywords": [
     "svelte",
     "rich text",
     "editor",
     "wysiwyg",
-    "flexiui"
+    "flexiui",
+    "text editor",
+    "tiptap",
+    "prosemirror"
   ],
   "type": "module",
   "scripts": {
@@ -37,9 +40,21 @@
   "license": "MIT",
   "dependencies": {
     "@flexiui/svelte-dropdown": "^0.4.0",
+    "@floating-ui/dom": "^1.7.4",
     "@tiptap/core": "^3.0.9",
+    "@tiptap/extension-highlight": "^3.6.6",
+    "@tiptap/extension-image": "^3.15.3",
+    "@tiptap/extension-list": "^3.15.3",
+    "@tiptap/extension-mathematics": "^3.14.0",
+    "@tiptap/extension-table": "^3.15.3",
+    "@tiptap/extension-text-align": "^3.6.6",
     "@tiptap/extension-text-style": "^3.0.9",
+    "@tiptap/html": "^3.14.0",
     "@tiptap/pm": "^3.0.9",
-    "@tiptap/starter-kit": "^3.0.9"
+    "@tiptap/starter-kit": "^3.0.9",
+    "@tiptap/static-renderer": "^3.14.0",
+    "katex": "^0.16.27",
+    "svelte-tiptap": "^3.0.0",
+    "wavesurfer.js": "^7.12.1"
   }
 }
